[project]
name = "encryptsync"
version = "0.1.0"
description = "EncryptedSync - Encrypted folder mirroring and live sync with GPG"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "JustOkaou", email = "contact@justokaou.xyz"}
]
dependencies = [
  "filelock==3.18.0",
  "PyYAML==6.0.2",
  "watchdog==6.0.0"
]

[project.scripts]
encryptsyncctl = "encryptsyncctl:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
